# discord-sticker-maker

./: .gitignore  Dockerfile  README.md  pyproject.toml  vercel.json
backend/: requirements.txt
backend/app/: jobs.py  main.py  matte_cache.py  models.py  observability.py  source_cache.py
backend/app/pipeline/: bg_removal.py  crop_fit.py  decode.py  encode.py  fovea_apng.py  fovea_gif.py  ingest.py  orchestrator.py  validate.py
bench/: __init__.py  cli.py  judge_eval.py  manifest.py  records.py  run.py  runners.py
bench/corpus/: README.md  generate.py  manifest.yaml  synthetic.yaml
docs/: STATE.md  STICKER_QUALITY_RESEARCH.md  architecture.md  bench.md  cli.md  fovea-spec.md  m2-judge.md  metrics.md
encoder/: __init__.py
encoder/cli/: __init__.py  main.py
encoder/core/: __init__.py  budget.py  encode.py  engines.py  ffmpeg.py  frames.py  levers.py  logging.py  result.py  search.py  sizes.py  timing.py
encoder/metrics/: __init__.py  banding.py  base.py  external.py  judge_features.py  learned.py  msssim.py  perceptual.py  temporal.py
encoder/metrics/training/: __init__.py  degrade.py  export.py  fetch_clips.py  gen_dataset.py  model.py  synth_clips.py  train.py
fovea-core/: .gitignore  Cargo.toml  pyproject.toml
fovea-core/src/: apng.rs  encode.rs  lib.rs  oklab.rs  python.rs
fovea-core/tests/: pipeline.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: Cropper.svelte  OutputStrip.svelte  ProgramMonitor.svelte  Timeline.svelte  Trim.svelte  api.js  cropMath.js  logger.js
tests/: conftest.py  test_banding_metric.py  test_engines_argv.py  test_fill_and_fps.py  test_integration_smoke.py  test_invisible_fallback.py  test_learned_judge.py  test_legacy_cache.py  test_manifest.py  test_metrics.py  test_native_engine.py  test_report.py  test_search.py  test_sizes.py  test_source_cache.py  test_source_endpoint.py  test_timing.py
